--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f6668f63c7ddb42b",
    "metadata": {
     "ExecuteTime": {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7cb636e738c4ee2c",
    "metadata": {
     "ExecuteTime": {
@@ -51,6 +51,8 @@
    },
    "outputs": [],
    "source": [
+    "from selenium.webdriver import Keys\n",
+    "\n",
     "driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
     "\n",
     "driver.get(url)\n",
@@ -81,7 +83,11 @@
     "\n",
     "sleep(3)\n",
     "\n",
-    "# send_prompt = driver.find_element(By.XPATH, '//*[@id=\"app-mount\"]/div[2]/div[1]/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[1]/main/form/div/div[2]/div/div[2]/div/div/div/span[2]/span[2]').send_keys('tehran in 2200')\n",
+    "send_prompt = driver.find_element(By.XPATH, '//*[@id=\"app-mount\"]/div[2]/div[1]/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[1]/main/form/div/div[2]/div/div[2]/div/div/div/span[2]/span[2]').send_keys('tehran in 2200')\n",
+    "\n",
+    "sleep(1)\n",
+    "\n",
+    "send_message = driver.find_element(By.CSS_SELECTOR, '#app-mount > div.appAsidePanelWrapper__714a6 > div.notAppAsidePanel__9d124 > div.app_b1f720 > div > div.layers__1c917.layers_a23c37 > div > div > div > div > div.chat__52833 > div.content__1a4fe > div > div.chatContainer__23434 > main > form > div > div.scrollableContainer__33e06.themedBackground__6b1b6.webkit__8d35a > div > div.textArea__74543.textAreaSlate_e0e383.slateContainer_b692b3 > div > div.markup_a7e664.editor__66464.slateTextArea__0661c.fontSize16Padding__48818').send_keys(Keys.RETURN)\n",
     "\n",
     "\n",
     "sleep(5)\n",
