Try to get img link

--- a/code.ipynb
+++ b/code.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "id": "f6668f63c7ddb42b",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T04:36:44.525320637Z",
-     "start_time": "2023-11-01T04:36:44.485742240Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-01T08:26:18.855597768Z",
+     "start_time": "2023-11-01T08:26:18.793898205Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -25,11 +25,11 @@
    "execution_count": 2,
    "id": "7cb636e738c4ee2c",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T04:36:44.526263877Z",
-     "start_time": "2023-11-01T04:36:44.524415405Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-01T08:26:18.865868776Z",
+     "start_time": "2023-11-01T08:26:18.855075969Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -40,16 +40,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "87040840d5158e43",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T08:23:16.907575888Z",
-     "start_time": "2023-11-01T08:23:02.246537803Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-01T08:38:41.339478094Z",
+     "start_time": "2023-11-01T08:38:11.661245945Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are logged in.\n",
+      "==========================================\n",
+      "You have become a midjourney chat.\n",
+      "==========================================\n",
+      "ok\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[7], line 90\u001B[0m\n\u001B[1;32m     86\u001B[0m sleep(\u001B[38;5;241m5\u001B[39m)\n\u001B[1;32m     88\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mok\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m---> 90\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m30\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     92\u001B[0m driver\u001B[38;5;241m.\u001B[39mquit()\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "from selenium.webdriver import Keys\n",
     "\n",
@@ -131,7 +154,7 @@
     "\n",
     "# =================================================================================================\n",
     "\n",
-    "a_tags = driver.find_elements(By.CLASS_NAME, 'originalLink__94d5d')\n",
+    "a_tags = driver.find_elements(By.CSS_SELECTOR, '#message-accessories-1169191644113948733 > div.mediaAttachmentsContainer_edba75 > div > div > div > div > div')\n",
     "for i in a_tags:\n",
     "    print(i)\n",
     "\n",
@@ -144,6 +167,16 @@
     "\n",
     "driver.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "46ca2766f2982ee9"
   }
  ],
  "metadata": {
