try to get img link

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "f6668f63c7ddb42b",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T08:26:18.855597768Z",
-     "start_time": "2023-11-01T08:26:18.793898205Z"
+     "end_time": "2023-11-01T11:26:48.549913709Z",
+     "start_time": "2023-11-01T11:26:48.548214753Z"
     }
    },
    "outputs": [],
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "7cb636e738c4ee2c",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T08:26:18.865868776Z",
-     "start_time": "2023-11-01T08:26:18.855075969Z"
+     "end_time": "2023-11-01T11:26:49.089601988Z",
+     "start_time": "2023-11-01T11:26:49.085445635Z"
     }
    },
    "outputs": [],
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "87040840d5158e43",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T08:38:41.339478094Z",
-     "start_time": "2023-11-01T08:38:11.661245945Z"
+     "end_time": "2023-11-01T11:34:39.986376960Z",
+     "start_time": "2023-11-01T11:34:18.295440222Z"
     }
    },
    "outputs": [
@@ -56,20 +56,22 @@
      "text": [
       "You are logged in.\n",
       "==========================================\n",
-      "You have become a midjourney chat.\n",
-      "==========================================\n",
-      "ok\n"
+      "You have entered the midjorney chat.\n",
+      "==========================================\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NoSuchElementException",
+     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[id=\"chat-messages-990816806581198869-1169229061453787217\"]\"}\n  (Session info: chrome=118.0.5993.70); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n#0 0x55fba78c3fb3 <unknown>\n#1 0x55fba75974a7 <unknown>\n#2 0x55fba75dedd6 <unknown>\n#3 0x55fba75deec1 <unknown>\n#4 0x55fba761c354 <unknown>\n#5 0x55fba760096d <unknown>\n#6 0x55fba7619c02 <unknown>\n#7 0x55fba7600713 <unknown>\n#8 0x55fba75d318b <unknown>\n#9 0x55fba75d3f7e <unknown>\n#10 0x55fba78898d8 <unknown>\n#11 0x55fba788d800 <unknown>\n#12 0x55fba7897cfc <unknown>\n#13 0x55fba788e418 <unknown>\n#14 0x55fba785b42f <unknown>\n#15 0x55fba78b24e8 <unknown>\n#16 0x55fba78b26b4 <unknown>\n#17 0x55fba78c3143 <unknown>\n#18 0x7f9ed2a94ac3 <unknown>\n",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[7], line 90\u001B[0m\n\u001B[1;32m     86\u001B[0m sleep(\u001B[38;5;241m5\u001B[39m)\n\u001B[1;32m     88\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mok\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m---> 90\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m30\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     92\u001B[0m driver\u001B[38;5;241m.\u001B[39mquit()\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+      "\u001B[0;31mNoSuchElementException\u001B[0m                    Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[34], line 129\u001B[0m\n\u001B[1;32m     29\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mYou have entered the midjorney chat.\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m==========================================\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     31\u001B[0m \u001B[38;5;66;03m# input_message = driver.find_element(By.CSS_SELECTOR, '#app-mount > div.appAsidePanelWrapper__714a6 > div.notAppAsidePanel__9d124 > div.app_b1f720 > div > div.layers__1c917.layers_a23c37 > div > div > div > div > div.chat__52833 > div.content__1a4fe > div > div.chatContainer__23434 > main > form > div > div.scrollableContainer__33e06.themedBackground__6b1b6.webkit__8d35a > div > div.textArea__74543.textAreaSlate_e0e383.slateContainer_b692b3 > div > div.markup_a7e664.editor__66464.slateTextArea__0661c.fontSize16Padding__48818').send_keys('/imagine')\u001B[39;00m\n\u001B[1;32m     32\u001B[0m \n\u001B[1;32m     33\u001B[0m \u001B[38;5;66;03m# sleep(3)\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    126\u001B[0m     \n\u001B[1;32m    127\u001B[0m \u001B[38;5;66;03m# =================================================================================================\u001B[39;00m\n\u001B[0;32m--> 129\u001B[0m an_li \u001B[38;5;241m=\u001B[39m \u001B[43mdriver\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfind_element\u001B[49m\u001B[43m(\u001B[49m\u001B[43mBy\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mID\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mchat-messages-990816806581198869-1169229061453787217\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m    130\u001B[0m \u001B[38;5;28mprint\u001B[39m(an_li)\n\u001B[1;32m    131\u001B[0m \u001B[38;5;28mprint\u001B[39m(an_li\u001B[38;5;241m.\u001B[39mtext)\n",
+      "File \u001B[0;32m~/Desktop/Midjourney/venv/lib/python3.10/site-packages/selenium/webdriver/remote/webdriver.py:738\u001B[0m, in \u001B[0;36mWebDriver.find_element\u001B[0;34m(self, by, value)\u001B[0m\n\u001B[1;32m    735\u001B[0m     by \u001B[38;5;241m=\u001B[39m By\u001B[38;5;241m.\u001B[39mCSS_SELECTOR\n\u001B[1;32m    736\u001B[0m     value \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[name=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mvalue\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m]\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m--> 738\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43mCommand\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mFIND_ELEMENT\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43musing\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mby\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mvalue\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mvalue\u001B[49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mvalue\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
+      "File \u001B[0;32m~/Desktop/Midjourney/venv/lib/python3.10/site-packages/selenium/webdriver/remote/webdriver.py:344\u001B[0m, in \u001B[0;36mWebDriver.execute\u001B[0;34m(self, driver_command, params)\u001B[0m\n\u001B[1;32m    342\u001B[0m response \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcommand_executor\u001B[38;5;241m.\u001B[39mexecute(driver_command, params)\n\u001B[1;32m    343\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m response:\n\u001B[0;32m--> 344\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43merror_handler\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcheck_response\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresponse\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    345\u001B[0m     response[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mvalue\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_unwrap_value(response\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mvalue\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28;01mNone\u001B[39;00m))\n\u001B[1;32m    346\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m response\n",
+      "File \u001B[0;32m~/Desktop/Midjourney/venv/lib/python3.10/site-packages/selenium/webdriver/remote/errorhandler.py:229\u001B[0m, in \u001B[0;36mErrorHandler.check_response\u001B[0;34m(self, response)\u001B[0m\n\u001B[1;32m    227\u001B[0m         alert_text \u001B[38;5;241m=\u001B[39m value[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124malert\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtext\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    228\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001B[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001B[39;00m\n\u001B[0;32m--> 229\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001B[0;31mNoSuchElementException\u001B[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[id=\"chat-messages-990816806581198869-1169229061453787217\"]\"}\n  (Session info: chrome=118.0.5993.70); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n#0 0x55fba78c3fb3 <unknown>\n#1 0x55fba75974a7 <unknown>\n#2 0x55fba75dedd6 <unknown>\n#3 0x55fba75deec1 <unknown>\n#4 0x55fba761c354 <unknown>\n#5 0x55fba760096d <unknown>\n#6 0x55fba7619c02 <unknown>\n#7 0x55fba7600713 <unknown>\n#8 0x55fba75d318b <unknown>\n#9 0x55fba75d3f7e <unknown>\n#10 0x55fba78898d8 <unknown>\n#11 0x55fba788d800 <unknown>\n#12 0x55fba7897cfc <unknown>\n#13 0x55fba788e418 <unknown>\n#14 0x55fba785b42f <unknown>\n#15 0x55fba78b24e8 <unknown>\n#16 0x55fba78b26b4 <unknown>\n#17 0x55fba78c3143 <unknown>\n#18 0x7f9ed2a94ac3 <unknown>\n"
      ]
     }
    ],
@@ -99,11 +101,10 @@
     "\n",
     "sleep(1)\n",
     "\n",
-    "\n",
     "# chat = driver.find_element(By.CSS_SELECTOR, '#channels > ul > li:nth-child(8) > div > div:nth-child(2) > a').click()\n",
     "chat = driver.find_element(By.XPATH, '//*[@id=\"channels\"]/ul/li[5]/div/div/a').click()\n",
     "\n",
-    "print('You have become a midjourney chat.\\n==========================================')\n",
+    "print('You have entered the midjorney chat.\\n==========================================')\n",
     "\n",
     "# input_message = driver.find_element(By.CSS_SELECTOR, '#app-mount > div.appAsidePanelWrapper__714a6 > div.notAppAsidePanel__9d124 > div.app_b1f720 > div > div.layers__1c917.layers_a23c37 > div > div > div > div > div.chat__52833 > div.content__1a4fe > div > div.chatContainer__23434 > main > form > div > div.scrollableContainer__33e06.themedBackground__6b1b6.webkit__8d35a > div > div.textArea__74543.textAreaSlate_e0e383.slateContainer_b692b3 > div > div.markup_a7e664.editor__66464.slateTextArea__0661c.fontSize16Padding__48818').send_keys('/imagine')\n",
     "\n",
@@ -154,9 +155,59 @@
     "\n",
     "# =================================================================================================\n",
     "\n",
-    "a_tags = driver.find_elements(By.CSS_SELECTOR, '#message-accessories-1169191644113948733 > div.mediaAttachmentsContainer_edba75 > div > div > div > div > div')\n",
-    "for i in a_tags:\n",
-    "    print(i)\n",
+    "# ol_tag = driver.find_element(By.CLASS_NAME, 'scrollerInner__059a5')\n",
+    "# \n",
+    "# li_tags = ol_tag.find_elements(By.CLASS_NAME, 'messageListItem__6a4fb')\n",
+    "# \n",
+    "# all = ol_tag.find_elements(By.TAG_NAME, re'.*')\n",
+    "# \n",
+    "# for i in all:\n",
+    "#     print(i)\n",
+    "#     print(i.id)\n",
+    "#     print(i.text)\n",
+    "#     print(i.tag_name)\n",
+    "\n",
+    "# =================================================================================================\n",
+    "\n",
+    "# print(len(li_tags))\n",
+    "# \n",
+    "# for item in li_tags:\n",
+    "#     print(item.id)\n",
+    "#     print(item.text)\n",
+    "#     print(item.tag_name)\n",
+    "\n",
+    "# print(ol_tag)\n",
+    "\n",
+    "# =================================================================================================\n",
+    "\n",
+    "# all_a_tags = driver.find_elements(By.TAG_NAME, 'a')\n",
+    "# \n",
+    "# for i in all_a_tags:\n",
+    "#     print(i)\n",
+    "#     print(i.text)\n",
+    "#     print(i.get_attribute('href'))\n",
+    "\n",
+    "# =================================================================================================\n",
+    "\n",
+    "# main = driver.find_element(By.CLASS_NAME, 'chatContent__5dca8')\n",
+    "# \n",
+    "# print(main.get_attribute('class'))\n",
+    "# \n",
+    "# all_li = main.find_elements(By.TAG_NAME, 'a')\n",
+    "# \n",
+    "# print(all_li)\n",
+    "# \n",
+    "# for i in all_li:\n",
+    "#     print(i)\n",
+    "#     print(i.text)\n",
+    "#     print(i.tag_name)\n",
+    "    \n",
+    "# =================================================================================================\n",
+    "\n",
+    "an_li = driver.find_element(By.ID, 'chat-messages-990816806581198869-1169229061453787217')\n",
+    "print(an_li)\n",
+    "print(an_li.text)\n",
+    "\n",
     "\n",
     "\n",
     "sleep(5)\n",
@@ -172,7 +223,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "    "
+   ],
    "metadata": {
     "collapsed": false
    },
