--- a/code.ipynb
+++ b/code.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f6668f63c7ddb42b",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-02T06:16:14.371678062Z",
-     "start_time": "2023-11-02T06:16:14.314596225Z"
+     "end_time": "2023-11-04T04:57:03.743936107Z",
+     "start_time": "2023-11-04T04:57:03.743569316Z"
     }
    },
    "outputs": [],
@@ -23,13 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7cb636e738c4ee2c",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-02T06:16:14.501023178Z",
-     "start_time": "2023-11-02T06:16:14.492786028Z"
+     "start_time": "2023-11-04T04:57:03.743835426Z"
     }
    },
    "outputs": [],
@@ -41,39 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "87040840d5158e43",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-02T06:47:13.086755819Z",
-     "start_time": "2023-11-02T06:46:42.981810200Z"
+     "end_time": "2023-11-04T04:57:03.744383161Z",
+     "start_time": "2023-11-04T04:57:03.744114707Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are logged in.\n",
-      "==========================================\n",
-      "You have entered the midjorney chat.\n",
-      "==========================================\n",
-      "ok\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[13], line 173\u001B[0m\n\u001B[1;32m    169\u001B[0m sleep(\u001B[38;5;241m5\u001B[39m)\n\u001B[1;32m    171\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mok\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m--> 173\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m30\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m    175\u001B[0m driver\u001B[38;5;241m.\u001B[39mquit()\n",
-      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -247,7 +223,7 @@
     "\n",
     "soup = BeautifulSoup(page_source, 'html.parser')\n",
     "\n",
-    "messageListItem__6a4fb\n",
+    "# messageListItem__6a4fb\n",
     "\n",
     "\n",
     "\n",
